# dataidea-blog

./: .gitignore  404.html  CNAME  DEPLOYMENT.md  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  sitemap.xml  styles.css
.github/workflows/: deploy.yml
.ipynb_checkpoints/: _quarto-checkpoint.yml
.jupyter/desktop-workspaces/: default-37a8.jupyterlab-workspace
.quarto/idx/: index.qmd.json
.quarto/xref/: INDEX
archive/2025/: index.html
archive/2026/: index.html
blog/: index.md
category/ai/: index.html
category/aiml/: index.html
category/announcements/: index.html
category/data-science/: index.html
category/education/: index.html
category/entertainment/: index.html
category/features/: index.html
category/football/: index.html
category/news--updates/: index.html
category/programming/: index.html
category/resources/: index.html
category/science/: index.html
docs/: .authors.yml  404.html  index.html  index.md  listings.json  search.json  sitemap.xml  styles.css
docs/blog/: index.md
docs/posts/: best-data-science-books-ranked.md  ds-star-google-data-science-agent.md  meet-trionda.md
overrides/: main.html
overrides/partials/: footer.html
posts/budget-ml-deploy-options/: index.md
posts/classification-metrics/: index.md
posts/creating-venvs/: index.md
posts/handling-imbalanced-datasets/: handling_imbalanced_data.md
posts/ml-model-deployment/: index.md
posts/mr-robot-softwares/: index.md
posts/programmer-puns/: index.md
posts/sklearn-unsupervised-learning/: index.md
search/: search_index.json
(+102 files in other folders)
