[tool.poetry]
name = "blog"
version = "0.1.0"
description = "A modern blog built with MkDocs and Material theme"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.38"
mkdocs-redirects = "^1.2.2"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
